Login and return bearer access_token
